# sandbox

./: .gitignore  .gitmodules  README.md
benchmarks/lu_decomposition/: LU_decomposition.ipynb  lu.c  lu.jl
dask/: Makefile  example.py  requirements.txt
gfortran-error-parser/: parser.py  test_parser.py
interface/: README.md
interface/cmake/: Makefile
interface/cmake/src/: CMakeLists.txt  foo.f
interface/meson/: 6_dynamic.py  6_dynamic_ctypes.py  Makefile
interface/meson/6_dynamic/: dynamic.f  main.f  meson.build
interface/nek5000_usr/: .state  SESSION.NAME  SIZE  api.py  compile.sh  libnek5000.h  makefile  makefile_usr.inc  nek5000_cy.pyx  phill.box  phill.ma2  phill.par  phill.re2  setup_cy.py  setup_ffi.py  test.py
interface/nek5000_usr/toolbox/: stat.f
interface/test_case/: MEOW  Makefile  README.md  cat_abi.py  cat_api.py  libcat.h  meow.f  program.f  test_cffi.py
interface/test_case_2_arrays/: MEOW  Makefile  README.md  cat_api.py  libcat.h  meow.f  program.f  test_cffi.py
paraview/: meeting_20200323.ipynb  nekio.py  open_nek_field_and_plot.py  open_nek_field_as_numpy.py  plot.py  rm_pv_imports.py  rw_velocity_slices.py  slices.py  velocity_to_stats.ipynb
paraview/states/: slice.pvsm
paraview/traces/: anim_slice.py  plot.py
